Store 3D settings in Preferences object